// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.
//
//        .----.      .--------'                    .-.                    
//          /   `    (_)   /    /            .--.`-'                       
//         /.  .-.        /    /-.   .-.    /  (_;  .-.  .  .-. .-.   .-.  
//        /  )/   )      /    /   |./.-'_  /       (  |   )/   )   )./.-'_ 
//       /  '/   (    .-/.__.'    |(__.'  (     --;-`-'-''/   /   ( (__.'  
//  .---------'   `- (_/  `-               `.___.'                 `-'     
//
// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.
// Diagram URL: https://dbdiagram.io/d/600c58b180d742080a3790ec
// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.

// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.
// User data
Table users as U {
  id long [pk, increment] // auto-increment
  email varchar
  password varchar
  created_at timestamp
  modified_at timestamp
}

Table user_profiles {
  id long [pk, increment]
  user_id long [ref: - users.id]
  is_active boolean [default: false]
  firstname varchar
  lastname varchar
  country_code varchar(2) [not null, note: "ISO 3166 compliant"]
  has_weekly_notifications boolean [default: false]
  has_daily_notifications boolean [default: false]
  has_live_notifications boolean [default: false]
  notification_email varchar [null]
  notification_url boolean [null]
}

// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.
// Team's related tables

Table teams {
  id int [pk, increment]
  name varchar
  description varchar
  country_code varchar(2) [not null, note: "ISO 3166 compliant"]
  group: varchar [null]
  organization: varchar [null]
}

Table meetings {
  id int [pk, increment]
  description varchar
  start_time timestamp
  end_time timestamp
}

Table team_meetings {
  team_id int [ref: - teams.id]
  meeting_id int [ref: - meetings.id]
}

Enum event_type {
  meeting_start
  meeting_end
  score_change
}

Table events {
  id long [pk, increment]
  description varchar
  occured_at timestamp
  type event_type
  meeting_id int [ref: > meetings.id]
}


// -*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.-*-.
// Subscriptions to team related notifications

Table subscribed_teams {
  user_profile_id long [ref: - subscriptions.id]
  team_id int [ref: - teams.id]
}